RESOLVED FIXED174707
AudioTrackPrivateMediaStreamCocoa shouldn't set AudioSession::setPreferredBufferSize
https://bugs.webkit.org/show_bug.cgi?id=174707
Summary AudioTrackPrivateMediaStreamCocoa shouldn't set AudioSession::setPreferredBuf...
Jeremy Jones
Reported 2017-07-20 22:40:02 PDT
AudioTrackPrivateMediaStreamCocoa shouldn't set AudioSession::setPreferredBufferSize
Attachments
Patch (2.15 KB, patch)
2017-07-20 22:48 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-07-20 22:40:29 PDT
Jeremy Jones
Comment 2 2017-07-20 22:48:14 PDT
WebKit Commit Bot
Comment 3 2017-07-21 12:55:03 PDT
Comment on attachment 316071 [details] Patch Clearing flags on attachment: 316071 Committed r219737: <http://trac.webkit.org/changeset/219737>
WebKit Commit Bot
Comment 4 2017-07-21 12:55:05 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2017-08-03 15:58:38 PDT
*** Bug 175011 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.