AudioTrackPrivateMediaStreamCocoa shouldn't set AudioSession::setPreferredBufferSize https://bugs.webkit.org/show_bug.cgi?id=174707 rdar://problem/33446809

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-07-21
Reviewed by Eric Carlson.

Manually tested for audio side effects.

AudioChannel::copyFrom fails when AudioChannel lengths don't match.

This happens because PlatformMediaSessionManager::updateSessionState() owns and sets
AudioSession::setPreferredBufferSize().

However, AudioTrackPrivateMediaStreamCocoa::createAudioUnit, when it creates an input
audio unit is setting AudioSession::setPreferredBufferSize() directly to its own arbitrary value.

AudioSession::setPreferredBufferSize() should be managed by the higher level
PlatformMediaSessionManager, and not modified by audio unit creation, in order to keep harmony
within the audio pipeline.

* platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.cpp:
(WebCore::AudioTrackPrivateMediaStreamCocoa::createAudioUnit):

Canonical link: https://commits.webkit.org/191546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219737 268f45cc-cd09-0410-ab3c-d52691b4dbfc